Fixes menu button spacing and reuses menu template

--- a/src/_scss/partials/_header.scss
+++ b/src/_scss/partials/_header.scss
@@ -239,10 +239,16 @@ header {
 
                     &.important {
                         border-color: $white;
+                        margin-left: 1em;
+                        margin-right: 1em;
 
                         &:hover {
                             background-color: $white;
                             color: $blue;
+                        }
+
+                        &:last-child {
+                            margin-right: 0;
                         }
                     }
                 }
